Thu Sep 16 14:14:31 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/MakeProjectCreator/config/event_serv.mpb:

	  Changed to inherit from svc_utils.

Thu Sep 16 12:36:29 2004  Steve Huston  <shuston@riverace.com>

	* ace/POSIX_Proactor.{h cpp}: Change the SystemType enumerator value
	  names to begin with ACE_. This avoids conflicts with other facilities
	  that use an OS_ prefix.

Thu Sep 16 09:22:08 2004  Dale Wilson  <wilson_d@ociweb.com>

        * ace/OS_NS_Thread.cpp:
          In ACE_TSS_Cleanup::exit, defer deleting TSS objects
          until it is no longer necessary to access the ACE_TSS_Cleanup
          itself.  One of the objects to be deleted is a Thread_Exit
          which may eventually cause (or at least allow) the deletion
          of the ACE_TSS_Cleanup.
          The original code worked like this but I changed it when
          I added additional cleanup operations to the exit method.

Thu Sep 16 08:14:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Memory_Pool.cpp:
        * ace/config-hpux-11.00.h:

          Removed a bug workaround for aCC A.03.04.  It is no longer a
          problem to specify other mmap base addresses when running
          64-bit HP-UX applications.

Thu Sep 16 07:47:09 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Added a CUSTOM_TARGETS macro that will allow users to access
          custom targets that can be generated with the use of the
          'verbatim' clause in mpc files.

Thu Sep 16 10:07:00 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * apps/Gateway/Peer/peer.mpc:
        * apps/Gateway/Peer/svc.conf:
        * apps/Gateway/Gateway/gateway.mpc:
        * apps/Gateway/Gateway/svc.conf:

          Changed MPC configuration to generate the correct makefiles/project
          files for building a separate daemon executable and service object
          shared library.